--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="en">
     <head>
-
+       <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     </head>
     <body>
         <h1>this is the title</h1>
 
         <script src="/socket.io/socket.io.js"></script>
-        <script src="/js/scripts.js"></script>
+        <script src="js/scripts.js"></script>
     </body>
 </html>
