--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,19 @@
        <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     </head>
     <body>
-        <h1>this is the title</h1>
+        <h1>this is the title for the chit-chatter</h1>
+
+        <ol id="messages"></ol>
+
+        <form action="submit" method="POST" id="message-form">
+            <label>Message</label>
+            <input type="text" name="message" />
+            <button type="submit" class="btn btn-success">Send</button>
+        </form>
+
 
         <script src="/socket.io/socket.io.js"></script>
+        <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
         <script src="js/scripts.js"></script>
     </body>
 </html>
