added script to parse query string

--- a/public/chat.html
+++ b/public/chat.html
@@ -21,6 +21,7 @@
 </div>
 <script src="/socket.io/socket.io.js"></script>
 <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-<script src="js/chat.js"></script>
+<script src="/js/libs/deparams.js"></script>
+<script src="/js/chat.js"></script>
 </body>
 </html>
