--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
-<title>The Home of Chit Chat</title>
-<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<body class="centered">
-<div class="centered-form_form">
-    <form action="/chat.html">
-        <div class="form-field">
-            <h3>Join the Chat</h3>
+
+<head>
+    <meta charset="UTF-8">
+    <title>The Home of Chit Chat</title>
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 col-lg-offset-4 text-center">
+                <form action="/chat.html">
+                    <div class="form-field">
+                        <h3>Join the Chat</h3>
+                        <br>
+                    </div>
+                    <div class="form-field">
+                        <label>Display Name</label>
+                        <input type="text" name="name" autofocus />
+                    </div>
+                    <div class="form-field">
+                        <label>Room Name</label>
+                        <input type="text" name="room" autofocus />
+                    </div>
+                    <div class="form-field">
+                        <button class="btn btn-success btn-block">Join</button>
+                    </div>
+                </form>
+                <br><br><br><br><br>
+                <a href="/img"><button class="btn btn-warning btn-default">See a picture</button></a>
+            </div>
+            <!-- <div class="col-md-3">
+                <button class="btn btn-info btn-lg btn-block">Wanna see a lady?</button>
+            </div> -->
         </div>
-        <div class="form-field">
-            <label>Display Name</label>
-            <input type="text" name="name" autofocus />
-        </div>
-        <div class="form-field">
-            <label>Room Name</label>
-            <input type="text" name="room" autofocus />
-        </div>
-        <div class="form-field">
-            <button class="btn btn-success">Join</button>
-        </div>
-    </form>
-</div>
+    </div>
 
 
     <script src="index.js"></script>
 </body>
+
 </html>
