added logo and more pics

--- a/public/chat.html
+++ b/public/chat.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <title>Chit-Chat Room</title>
+    <title>Talk Cock</title>
 </head>
 
 <body class="chat">
     <div class="col-lg-6 col-lg-offset-3 text-center">
         <h3>Don't worry, this is all encrypted!</h3>
+        <p class="lead">Feel free, they cannot see you...</p>
         <div id="users" class="form-field"></div>
 
         <div class="chat_main">
