--- a/public/index.html
+++ b/public/index.html
@@ -1,45 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <title>The Home of Chit Chat</title>
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <title>The Home of Chit Chat</title>
+        <link rel="stylesheet" type="text/css"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/styles.css">
+    </head>
 
-<body>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-4 col-lg-offset-4 text-center">
-                <form action="/chat.html">
-                    <div class="form-field">
-                        <h3>Join the Chat</h3>
-                        <br>
+    <body>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-2 offset-lg-2">
+                    <img src="assets/logo.svg" alt="logo" class="pic logo" width="100" height="100">
+                </div>
+                <div class="col-lg-4 text-center">
+                    <form action="/chat.html">
+                        <div class="form-field">
+                            <h3>Join the Chat</h3>
+                            <br>
+                        </div>
+                        <div class="form-field">
+                            <label for="name">Name</label> <input type="text" name="name" autofocus/>
+                        </div>
+                        <div class="form-field">
+                            <label for="room">Room</label> <input type="text" name="room" autofocus/>
+                        </div>
+                        <div class="form-field">
+                            <button class="btn btn-success btn-block">Join</button>
+                        </div>
+                    </form>
+                    <br><br>
+                    <div>
+                        <h3>Click to Stream Sweet Pictures</h3>
                     </div>
-                    <div class="form-field">
-                        <label>Display Name</label>
-                        <input type="text" name="name" autofocus />
+                    <div>
+                        <a href="/pic1">
+                            <button class="btn btn-warning btn-default pic">City Lights
+                                <p class="lead">8.31 MB</p>
+                            </button>
+
+                        </a>
                     </div>
-                    <div class="form-field">
-                        <label>Room Name</label>
-                        <input type="text" name="room" autofocus />
+                    <div>
+                        <a href="/pic2">
+                            <button class="btn btn-primary btn-default pic">The Great Outdoors
+                                <p class="lead">8.35 MB</p>
+                            </button>
+                        </a>
                     </div>
-                    <div class="form-field">
-                        <button class="btn btn-success btn-block">Join</button>
+                    <div>
+                        <a href="/pic3">
+                            <button class="btn btn-success btn-default pic">Asian Boat Ride
+                                <p class="lead">3.96 MB</p>
+                            </button>
+                        </a>
                     </div>
-                </form>
-                <br><br><br><br><br>
-                <a href="/img"><button class="btn btn-warning btn-default">See a picture</button></a>
+                    <div>
+                        <a href="/pic4">
+                            <button class="btn btn-info btn-default pic">Moab, Utah
+                                <p class="lead">3.54 MB</p>
+                            </button>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="/pic5">
+                            <button class="btn btn-danger btn-default pic">USA, USA!
+                                <p class="lead">2.40 MB</p>
+                            </button>
+                        </a></div>
+                    <div>
+                        <a href="/pic6">
+                            <button class="btn btn-warning btn-default pic">FML...
+                                <p class="lead">4.16 MB</p>
+                            </button>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <img src="assets/logo.svg" alt="logo" class="pic logo" width="100" height="100">
+                </div>
             </div>
-            <!-- <div class="col-md-3">
-                <button class="btn btn-info btn-lg btn-block">Wanna see a lady?</button>
-            </div> -->
         </div>
-    </div>
 
 
-    <script src="index.js"></script>
-</body>
+        <script src="index.js"></script>
+    </body>
 
 </html>
